TODO: Solve mobile menu ,  enahancing  ui

--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -37,6 +37,9 @@
             "subTotal": "Sub Total:",
             "viewCart": "View Cart",
             "checkout": "Checkout",
+            "discount": "Discount",
+            "discountPer": "Discount(%{per})",
+            "shipping": "Shipping",
             "noProduct": "No products in cart"
         }
     },
