TODO:offers & ui

--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -7,6 +7,9 @@
     "store_location" : "store location",
     "en_at" : "end at",
     "all" : "all",
+    "home": "Home",
+    "shop_page": "Shop",
+    "add_to_cart": "Add To Cart",
     "add_to_Cart":"add to cart",
     "wishlist":"wishlist",
     "view":"view",
